KAFKA-17762 Remove Utils.isBlank